Fix page width on mobile browsers

--- a/src/css/default.css
+++ b/src/css/default.css
@@ -5,10 +5,28 @@ body
   margin: 0;
 }
 
-.wrapper {
+.centered {
   width: 750px;
   margin: 0 auto;
   padding: 20px;
+}
+
+.wrapper {
+  width: 750px;
+  margin: 0 auto;
+}
+
+@media (max-width:1000px)
+{
+  .centered
+  {
+    width: auto;
+  }
+
+  .wrapper
+  {
+    width: 100%;
+  }
 }
 
 .header {
